# cn-credentials-standard/demo/java-api/src/main/java/io/unlockit/application/credential/api/RegisteredCredentialResource.java
@@ -2,38 +2,28 @@ package io.unlockit.application.credential.api;
 
 import io.unlockit.application.credential.dto.RegisteredCredentialPageResponse;
 import io.unlockit.application.credential.dto.RegisteredCredentialResponse;
-import io.unlockit.application.credential.manager.CredentialManager;
+import io.unlockit.application.credential.manager.CredentialListingManager;
 import jakarta.inject.Inject;
-import jakarta.ws.rs.GET;
-import jakarta.ws.rs.Path;
-import jakarta.ws.rs.PathParam;
-import jakarta.ws.rs.Produces;
-import jakarta.ws.rs.QueryParam;
+import jakarta.ws.rs.*;
 import jakarta.ws.rs.core.MediaType;
 
 @Path("/v1/registered-credentials")
 @Produces(MediaType.APPLICATION_JSON)
 public class RegisteredCredentialResource {
-  private final CredentialManager manager;
+  private final CredentialListingManager manager;
 
   @Inject
-  public RegisteredCredentialResource(CredentialManager manager) {
-    this.manager = manager;
-  }
+  public RegisteredCredentialResource(CredentialListingManager manager) { this.manager = manager; }
 
   @GET
   @Path("/{credentialId}")
-  public RegisteredCredentialResponse findByCredentialId(
-      @PathParam("credentialId") String credentialId,
-      @QueryParam("lifecycleScope") String lifecycleScope) {
-    return manager.findRegisteredByCredentialId(credentialId, lifecycleScope);
+  public RegisteredCredentialResponse findByCredentialId(@PathParam("credentialId") String credentialId,
+      @BeanParam CredentialParameters parameters) {
+    return manager.getRegistered(credentialId, parameters.state());
   }
 
   @GET
-  public RegisteredCredentialPageResponse findPage(
-      @QueryParam("page") String page,
-      @QueryParam("pageSize") String pageSize,
-      @QueryParam("lifecycleScope") String lifecycleScope) {
-    return manager.findRegisteredPage(page, pageSize, lifecycleScope);
+  public RegisteredCredentialPageResponse findPage(@BeanParam CredentialParameters parameters) {
+    return manager.listRegistered(parameters.page, parameters.pageSize, parameters.nextPageToken, parameters.filters(true));
   }
 }
