# cn-credentials-standard/demo/java-api/src/main/java/io/unlockit/application/credential/dto/IssuanceFactoryResponse.java
@@ -1,3 +1,3 @@
 package io.unlockit.application.credential.dto;
 
-public record IssuanceFactoryResponse(String contractId, String issuer) {}
+public record IssuanceFactoryResponse(String contractId, com.fasterxml.jackson.databind.JsonNode anchorers) {}
